--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -14,16 +13,6 @@
     <!-- Main CSS File -->
     <link rel="stylesheet" href="main.css" />
     <title>Frontend Mentor | Fylo data storage component</title>
-
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <div class="container">
@@ -38,7 +27,7 @@
         </div>
       </div>
       <div class="right-box">
-        <p>You’ve used <span>815 GB</span> of your storage</p>
+        <h1>You’ve used <span>815 GB</span> of your storage</h1>
         <div class="progress"></div>
         <div class="info">
           <p>0 GB</p>
