--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="right-box">
-        <h1>You’ve used <span>815 GB</span> of your storage</h1>
+        <p>You’ve used <span>815 GB</span> of your storage</p>
         <div class="progress"></div>
         <div class="info">
           <p>0 GB</p>
@@ -39,13 +39,14 @@
         </div>
       </div>
     </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a href="https://www.frontendmentor.io/profile/RagaBoGaa">RagaBoGaa</a>.
-    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://www.frontendmentor.io/profile/RagaBoGaa">RagaBoGaa</a>.
+      </div>
+    </footer>
   </body>
 </html>
