--- a/index.html
+++ b/index.html
@@ -15,30 +15,33 @@
     <title>Frontend Mentor | Fylo data storage component</title>
   </head>
   <body>
-    <div class="container">
-      <div class="left-box">
-        <div class="logo">
-          <img src="images/logo.svg" alt="" />
+    <main>
+      <div class="container">
+        <div class="left-box">
+          <div class="logo">
+            <img src="images/logo.svg" alt="" />
+          </div>
+          <div class="icons">
+            <img src="images/icon-document.svg" alt="" />
+            <img src="images/icon-folder.svg" alt="" />
+            <img src="images/icon-upload.svg" alt="" />
+          </div>
         </div>
-        <div class="icons">
-          <img src="images/icon-document.svg" alt="" />
-          <img src="images/icon-folder.svg" alt="" />
-          <img src="images/icon-upload.svg" alt="" />
+        <div class="right-box">
+          <p>You’ve used <span>815 GB</span> of your storage</p>
+          <div class="progress"></div>
+          <div class="info">
+            <p>0 GB</p>
+            <p>1000 GB</p>
+          </div>
+          <div class="float-bubble">
+            <div>185</div>
+            <div>GB Left</div>
+          </div>
         </div>
       </div>
-      <div class="right-box">
-        <p>You’ve used <span>815 GB</span> of your storage</p>
-        <div class="progress"></div>
-        <div class="info">
-          <p>0 GB</p>
-          <p>1000 GB</p>
-        </div>
-        <div class="float-bubble">
-          <div>185</div>
-          <div>GB Left</div>
-        </div>
-      </div>
-    </div>
+    </main>
+
     <footer>
       <div class="attribution">
         Challenge by
