--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="right-box">
-          <p>You’ve used <span>815 GB</span> of your storage</p>
+          <h1>You’ve used <span>815 GB</span> of your storage</h1>
           <div class="progress"></div>
           <div class="info">
             <p>0 GB</p>
