--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <main>
       <div class="container">
+        <h1>Hello</h1>
         <div class="left-box">
           <div class="logo">
             <img src="images/logo.svg" alt="" />
@@ -28,7 +29,7 @@
           </div>
         </div>
         <div class="right-box">
-          <h1>You’ve used <span>815 GB</span> of your storage</h1>
+          <p>You’ve used <span>815 GB</span> of your storage</p>
           <div class="progress"></div>
           <div class="info">
             <p>0 GB</p>
